# model-predictive-control

./: PoseiBot.md  ProjectHome.md  prueba.txt
ardrone_mpc/: CMakeLists.txt  mainpage.dox  manifest.xml
ardrone_mpc/data/control_data/: ardrone_mpc_data.txtardrone_mpc_data.txtardrone_mpc_data.txtardrone_mpc_data.txt
ardrone_mpc/data/test_1/: Test_1_Parameters_README  identification_input_data.txt  identification_output_data.txt
ardrone_mpc/data/test_1/Identification_Test_X/: identification_output_data_rotz.txt
ardrone_mpc/data/test_1/Identification_Test_Y/: identification_input_data.txt
ardrone_mpc/data/test_1/Identification_Test_Yaw/: identification_input_data.txt
ardrone_mpc/data/test_1/Identification_Test_Z/: identification_input_data.txt  identification_output_data.txt
ardrone_mpc/data/test_2/Identification_Test_X/: identification_output_data.txt
ardrone_mpc/data/test_2/Identification_Test_Y/: identification_output_data.txt
ardrone_mpc/data/test_2/Identification_Test_Yaw/: identification_output_data_rotations.txt
ardrone_mpc/data/test_2/Identification_Test_Z/: identification_output_data.txt  identification_output_data_rotations.txt
ardrone_mpc/data/test_3/: identification_input_data.txt
ardrone_mpc/data/test_3/Identification_Test_X/: identification_output_data.txt  identification_output_data_rotations.txt
ardrone_mpc/data/test_3/Identification_Test_Y/: identification_input_data.txt  identification_output_data.txt  identification_output_data_rotations.txt
ardrone_mpc/data/test_3/Identification_Test_Yaw/: identification_input_data.txt
ardrone_mpc/data/test_4/: identification_input_data.txt
ardrone_mpc/data/test_5/: identification_input_data.txt  identification_output_data.txt
ardrone_mpc/include/ardrone_mpc/: ardrone_model.h  ardrone_sim.h
ardrone_mpc/msg/: Reference.msg
ardrone_mpc/msg_gen/lisp/: Reference.lisp  _package.lisp  _package_Reference.lisp  ardrone_mpc-msg.asd
ardrone_mpc/script/: data_plot.py  data_plot_rot.py
ardrone_mpc/src/: ardrone_model.cpp  ardrone_rec_identification2.cpp  gazebo_quadrotor_tf_listener.cpp
mpc/: CMakeLists.txt  (+3 more)
trunk/mpc/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  mpc_parameters.yaml
trunk/mpc/data/: tanks_stdmpc.txt
trunk/mpc/doc/: mpc_doxygen  mpc_log.txt
trunk/mpc/launch/: ardronempc_parameters.yaml  lbmpc_parameters.yaml  mpc.launch  stdmpc_parameters.yaml  stdmpc_parameters.yaml.r180
trunk/mpc/msg/: MPCState.msg
trunk/mpc/script/: ardrone_mpc_plot.py  lbmpc_control_design.py  lbmpc_parameters.yaml  model_validation_plot.py  model_validation_plot_input.py  mpc_plot.py
trunk/mpc/src/: MPCmainNode.cpp  QPOASES.cpp  Solver_qpOASES.cpp  Tanksystem.cpp  TanksystemSim.cpp  ardrone_gazebo_mpc_node.cpp  ardronempc_node.cpp  lbmpc.cpp  lbmpc_node.cpp  linear_evaluation.cpp  model.cpp  model_validation.cpp  mpc_node.cpp  optimizer.cpp  stdmpc_node.cpp  stdmpc_node.cpp.r180
trunk/mpc/test/: IntegrationTest_main.cpp  Integration_test_main.cpp  stdmpc_node.cpp
(+233 files in other folders)
